@@ -51,6 +51,8 @@ Version 4.2  [ under development ]
         - Renamed "Ideal to Finite" as "Truncate Ideal Vertices" in the menu.
         - Include a padlock in the corner of a packet icon if the packet
           is uneditable.
+        - Tighter thread safety in the GUI.  This is required because some
+          calculations (such as surface enumeration) run in a separate thread.
     TEST SUITE:
         - Added tests for SnapPea calculations.
         - Further additions to the triangulation tests, in particular
